--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "db-6.0.20.tar.gz": 03155e4ebdb6572a3cc684965f2ae307ac75a458
+  db-6.0.30.tar.gz: 038dca3ef2984c6cb95ff088d1ab7c7b9da40883
